--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "search-box-pro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://santiagoojeda.github.io/porfolio/",
+  "homepage": "https://santiagoojeda.github.io/search-box-pro/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
